force-app/main/default/objects/Contact/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <description>Custom Full Name in First Name , Last Name sequence for TH</description>
    <formula>LastName &amp; &quot; &quot; &amp; FirstName</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>