force-app/main/default/objects/Contact/fields/GiftGiver__c.field-meta.xml
<CustomField>
    <fullName>GiftGiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Giver (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>