force-app/main/default/objects/Contact/fields/GiftGiverEnable__c.field-meta.xml
<CustomField>
    <fullName>GiftGiverEnable__c</fullName>
    <formula>IF( BrandRelationshipGiftGiverCount__c &gt; 0, TRUE, FALSE)</formula>
    <label>Gift Giver</label>
    <type>Checkbox</type>
</CustomField>