force-app/main/default/objects/Contact/fields/Give_Up_Reason__c.field-meta.xml
<CustomField>
    <fullName>Give_Up_Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[8-Sep-21 Khai] For data migration / integration, similar to the unsuccessful reason on the Case</description>
    <label>Give Up Reason</label>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Contacts (Give Up Reason)</relationshipLabel>
    <relationshipName>Contact_Give_Up_Reason</relationshipName>
    <type>Lookup</type>
</CustomField>