force-app/main/default/objects/Contact/fields/GoogleClickId__c.field-meta.xml
<CustomField>
    <fullName>GoogleClickId__c</fullName>
    <description>For SG market</description>
    <label>Google Click Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>