force-app/main/default/objects/Contact/fields/Hard_Update__c.field-meta.xml
<CustomField>
    <fullName>Hard_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard Update</label>
    <type>Checkbox</type>
</CustomField>