force-app/main/default/objects/Contact/fields/HasOptOutPostalMail__c.field-meta.xml
<CustomField>
    <fullName>HasOptOutPostalMail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[8-Jul-21 KSK] Used in data migration; Dynamics CRM</description>
    <label>Postal Mail Opt Out</label>
    <type>Checkbox</type>
</CustomField>