force-app/main/default/objects/Contact/fields/Have_Ordered_PED__c.field-meta.xml
<CustomField>
    <fullName>Have_Ordered_PED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[13-Aug-21 Khai] As part of US-2957, [PED] be able to recognize if a contact has a purchase of a standard priced PED product</description>
    <label>Have Ordered PED</label>
    <type>Checkbox</type>
</CustomField>