force-app/main/default/objects/Contact/fields/Have_Purchased_Paid_Sample__c.field-meta.xml
<CustomField>
    <fullName>Have_Purchased_Paid_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Purchased Paid Sample</label>
    <type>Checkbox</type>
</CustomField>