force-app/main/default/objects/Contact/fields/HomePhoneExt__c.field-meta.xml
<CustomField>
    <fullName>HomePhoneExt__c</fullName>
    <label>HomePhoneExt</label>
    <length>12</length>
    <type>Text</type>
</CustomField>