force-app/main/default/objects/Contact/fields/HouseholdBatchProcessed__c.field-meta.xml
<CustomField>
    <fullName>HouseholdBatchProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HouseholdBatchProcessed</label>
    <type>Checkbox</type>
</CustomField>