force-app/main/default/objects/Contact/fields/HouseHoldHistoryId__c.field-meta.xml
<CustomField>
    <fullName>HouseHoldHistoryId__c</fullName>
    <label>HouseHold History Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>