force-app/main/default/objects/Contact/fields/Initial_Estimated_Due_Date_IEDD__c.field-meta.xml
<CustomField>
    <fullName>Initial_Estimated_Due_Date_IEDD__c</fullName>
    <label>Initial Estimated Due Date (IEDD)</label>
    <type>Date</type>
</CustomField>