force-app/main/default/objects/Contact/fields/Interested_Brands__c.field-meta.xml
<CustomField>
    <fullName>Interested_Brands__c</fullName>
    <label>Interested Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pediasure</fullName>
            </value>
            <value>
                <fullName>Ensure</fullName>
            </value>
            <value>
                <fullName>Similac</fullName>
            </value>
            <value>
                <fullName>Glucerna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>