force-app/main/default/objects/Contact/fields/is_HENS__c.field-meta.xml
<CustomField>
    <fullName>is_HENS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is HENS</label>
    <type>Checkbox</type>
</CustomField>