force-app/main/default/objects/Contact/fields/Is_Three_And_Above__c.field-meta.xml
<CustomField>
    <fullName>Is_Three_And_Above__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Three And Above</label>
    <type>Checkbox</type>
</CustomField>