force-app/main/default/objects/Contact/fields/isSixMonthCompleted__c.field-meta.xml
<CustomField>
    <fullName>isSixMonthCompleted__c</fullName>
    <formula>IF(ADDMONTHS(CreatedDate,6) &lt;=  NOW(), 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isSixMonthCompleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>