force-app/main/default/objects/Contact/fields/isSynced__c.field-meta.xml
<CustomField>
    <fullName>isSynced__c</fullName>
    <description>Indicator if technical fields referenced by Marketing Cloud are in synced with SF formula fields
Weeks of Pregnancy for Adult Contact and
Age in Months for Child Contact</description>
    <formula>IF( ISPICKVAL( Type__c, &apos;Adult&apos;) ,  
WeeksOfPregnancy__c ==  WeeksOfPregnancy2__c ,
AgeinMonths__c ==  AgeinMonths2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isSynced</label>
    <type>Checkbox</type>
</CustomField>