force-app/main/default/objects/Contact/fields/isTested__c.field-meta.xml
<CustomField>
    <fullName>isTested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTested</label>
    <type>Checkbox</type>
</CustomField>