force-app/main/default/objects/Contact/fields/KCalDay__c.field-meta.xml
<CustomField>
    <fullName>KCalDay__c</fullName>
    <inlineHelpText>Recommended Calories</inlineHelpText>
    <label>KCal/Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>