force-app/main/default/objects/Contact/fields/Last_Brand_Transacted__c.field-meta.xml
<CustomField>
    <fullName>Last_Brand_Transacted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Brand Transacted</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contacts (Last Brand Transacted)</relationshipLabel>
    <relationshipName>Contacts_Last_Brand</relationshipName>
    <type>Lookup</type>
</CustomField>