force-app/main/default/objects/Contact/fields/LastCallDate__c.field-meta.xml
<CustomField>
    <fullName>LastCallDate__c</fullName>
    <label>Latest Call Date</label>
    <type>DateTime</type>
</CustomField>