force-app/main/default/objects/Contact/fields/Latency__c.field-meta.xml
<CustomField>
    <fullName>Latency__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Latency</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>