force-app/main/default/objects/Contact/fields/Latest_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Latest_Call_Outcome__c</fullName>
    <label>Latest Call Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>