force-app/main/default/objects/Contact/fields/Latest_Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Contacted_Date__c</fullName>
    <label>Latest Contacted Date</label>
    <type>DateTime</type>
</CustomField>