force-app/main/default/objects/Contact/fields/Latest_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Email_Sent_Date__c</fullName>
    <label>Latest Email Sent Date</label>
    <type>DateTime</type>
</CustomField>