force-app/main/default/objects/Contact/fields/Latest_SMS_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_SMS_Sent_Date__c</fullName>
    <label>Latest SMS Sent Date</label>
    <type>DateTime</type>
</CustomField>