force-app/main/default/objects/Contact/fields/LatestBrandSwitchAsUser__c.field-meta.xml
<CustomField>
    <fullName>LatestBrandSwitchAsUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Brand Switch as User</label>
    <referenceTo>BrandRelationship__c</referenceTo>
    <relationshipLabel>Latest Brand Switch as User</relationshipLabel>
    <relationshipName>LatestBrandSwitchUser</relationshipName>
    <type>Lookup</type>
</CustomField>