force-app/main/default/objects/Contact/fields/LatestCall2__c.field-meta.xml
<CustomField>
    <fullName>LatestCall2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Call (Technical)</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contacts (Latest Call)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>