force-app/main/default/objects/Contact/fields/LatestCall__c.field-meta.xml
<CustomField>
    <fullName>LatestCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Call</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Latest Call</relationshipLabel>
    <relationshipName>LatestCall</relationshipName>
    <type>Lookup</type>
</CustomField>