force-app/main/default/objects/Contact/fields/LatestChannelResponse__c.field-meta.xml
<CustomField>
    <fullName>LatestChannelResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Channel Response</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>LatestChannelResponse</relationshipName>
    <type>Lookup</type>
</CustomField>