force-app/main/default/objects/Contact/fields/LatestOpenCallDate__c.field-meta.xml
<CustomField>
    <fullName>LatestOpenCallDate__c</fullName>
    <label>Latest Open Call Date</label>
    <type>DateTime</type>
</CustomField>