force-app/main/default/objects/Contact/fields/LatestTransaction__c.field-meta.xml
<CustomField>
    <fullName>LatestTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Transaction</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Contacts (Latest Transaction)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>