force-app/main/default/objects/Contact/fields/LifetimePoints__c.field-meta.xml
<CustomField>
    <fullName>LifetimePoints__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lifetime Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>