force-app/main/default/objects/Contact/fields/LifetimePurchased__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchased__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lifetime Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>