force-app/main/default/objects/Contact/fields/LineOptOut__c.field-meta.xml
<CustomField>
    <fullName>LineOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Opt Out</label>
    <type>Checkbox</type>
</CustomField>