force-app/main/default/objects/Contact/fields/LineOptOutDate__c.field-meta.xml
<CustomField>
    <fullName>LineOptOutDate__c</fullName>
    <label>Line Opt Out Date</label>
    <type>Date</type>
</CustomField>