force-app/main/default/objects/Contact/fields/LineUIDAdult__c.field-meta.xml
<CustomField>
    <fullName>LineUIDAdult__c</fullName>
    <label>Line UID Adult</label>
    <length>33</length>
    <type>Text</type>
</CustomField>