force-app/main/default/objects/Contact/fields/LineUIDPediatric__c.field-meta.xml
<CustomField>
    <fullName>LineUIDPediatric__c</fullName>
    <label>Line UID Pediatric</label>
    <length>33</length>
    <type>Text</type>
</CustomField>