force-app/main/default/objects/Contact/fields/LockedCount__c.field-meta.xml
<CustomField>
    <fullName>LockedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Locked Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>