force-app/main/default/objects/Contact/fields/LoyaltyID__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyID__c</fullName>
    <formula>AutoNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loyalty ID</label>
    <type>Text</type>
</CustomField>