force-app/main/default/objects/Contact/fields/LoyaltyPoints__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyPoints__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Loyalty Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>