force-app/main/default/objects/Contact/fields/LungDiseaseName__c.field-meta.xml
<CustomField>
    <fullName>LungDiseaseName__c</fullName>
    <label>Lung Disease Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>