force-app/main/default/objects/Contact/fields/Main_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Mobile__c</fullName>
    <description>[4-Oct-21 Khai] This field extracts the mobile number of the parent contact. Requested by TW market</description>
    <formula>Parent__r.Phone</formula>
    <inlineHelpText>This is the mobile number of the main contact, as child records don&apos;t have phone numbers</inlineHelpText>
    <label>Main Contact Mobile</label>
    <type>Text</type>
</CustomField>