force-app/main/default/objects/Contact/fields/MainMedicalCondition__c.field-meta.xml
<CustomField>
    <fullName>MainMedicalCondition__c</fullName>
    <label>Main Medical Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>