force-app/main/default/objects/Contact/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>TEXT(Account.Market__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>