force-app/main/default/objects/Contact/fields/MarketForDuplicate__c.field-meta.xml
<CustomField>
    <fullName>MarketForDuplicate__c</fullName>
    <label>Market For Duplicate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VN</fullName>
            </value>
            <value>
                <fullName>MY</fullName>
            </value>
            <value>
                <fullName>PH</fullName>
            </value>
            <value>
                <fullName>TH</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>HK</fullName>
            </value>
            <value>
                <fullName>TW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>