force-app/main/default/objects/Contact/fields/Master_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Master_Opt_Out_Date__c</fullName>
    <label>Master Opt Out Date</label>
    <type>DateTime</type>
</CustomField>