force-app/main/default/objects/Contact/fields/MasterOptOut__c.field-meta.xml
<CustomField>
    <fullName>MasterOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Opt Out</label>
    <type>Checkbox</type>
</CustomField>