force-app/main/default/objects/Contact/fields/MB_Mobile1__c.field-meta.xml
<CustomField>
    <fullName>MB_Mobile1__c</fullName>
    <label>MB Mobile1</label>
    <type>Phone</type>
</CustomField>