force-app/main/default/objects/Contact/fields/MB_Mobile__c.field-meta.xml
<CustomField>
    <fullName>MB_Mobile__c</fullName>
    <label>MB Mobile</label>
    <type>Phone</type>
</CustomField>