force-app/main/default/objects/Contact/fields/mbird__Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>mbird__Contact_Id__c</fullName>
    <description>The unique ID generated by the MessageBird platform that identifies this contact.</description>
    <externalId>true</externalId>
    <label>Contact Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>