force-app/main/default/objects/Contact/fields/mbird__Created_Datetime__c.field-meta.xml
<CustomField>
    <fullName>mbird__Created_Datetime__c</fullName>
    <description>The datetime when the message was created (in RFC3339 format).</description>
    <label>Created Datetime</label>
    <type>DateTime</type>
</CustomField>