force-app/main/default/objects/Contact/fields/mbird__Updated_Datetime__c.field-meta.xml
<CustomField>
    <fullName>mbird__Updated_Datetime__c</fullName>
    <description>The datetime when the message was updated (in RFC3339 format).</description>
    <label>Updated Datetime</label>
    <type>DateTime</type>
</CustomField>