force-app/main/default/objects/Contact/fields/mbird__URL__c.field-meta.xml
<CustomField>
    <fullName>mbird__URL__c</fullName>
    <description>The URL of this contact object.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>