force-app/main/default/objects/Contact/fields/MC_IN_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_IN_Sync_Eligibility__c</fullName>
    <formula>AND(Market__c = &apos;IN&apos;, OR (Phone != null , Email != null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC_IN_Sync_Eligibility</label>
    <type>Checkbox</type>
</CustomField>