force-app/main/default/objects/Contact/fields/MC_PH_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_PH_Sync_Eligibility__c</fullName>
    <formula>AND(Market__c = &apos;PH&apos;,  OR (Phone != null , Email != null, Mobile_Main_Contact__c != null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC_PH_Sync_Eligibility</label>
    <type>Checkbox</type>
</CustomField>