force-app/main/default/objects/Contact/fields/MC_Sync_Eligibility_TW__c.field-meta.xml
<CustomField>
    <fullName>MC_Sync_Eligibility_TW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Sync Eligibility TW</label>
    <type>Checkbox</type>
</CustomField>