force-app/main/default/objects/Contact/fields/MC_TH_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_TH_Sync_Eligibility__c</fullName>
    <formula>AND(Market__c = &apos;TH&apos;, OR (Phone != null , Email != null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC TH Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>