force-app/main/default/objects/Contact/fields/MCConversionAttemptRequired__c.field-meta.xml
<CustomField>
    <fullName>MCConversionAttemptRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Conversion Attempt Required</label>
    <type>Checkbox</type>
</CustomField>