force-app/main/default/objects/Contact/fields/MCEnsureEndUser__c.field-meta.xml
<CustomField>
    <fullName>MCEnsureEndUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Ensure End User</label>
    <type>Checkbox</type>
</CustomField>