force-app/main/default/objects/Contact/fields/MCEnsureMainContact__c.field-meta.xml
<CustomField>
    <fullName>MCEnsureMainContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Ensure Main Contact</label>
    <type>Checkbox</type>
</CustomField>