force-app/main/default/objects/Contact/fields/MCGlucernaEndUser__c.field-meta.xml
<CustomField>
    <fullName>MCGlucernaEndUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Glucerna End User</label>
    <type>Checkbox</type>
</CustomField>