force-app/main/default/objects/Contact/fields/MCGlucernaMainContact__c.field-meta.xml
<CustomField>
    <fullName>MCGlucernaMainContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Glucerna  Main Contact</label>
    <type>Checkbox</type>
</CustomField>