force-app/main/default/objects/Contact/fields/MCGrowEndUser__c.field-meta.xml
<CustomField>
    <fullName>MCGrowEndUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Grow End User</label>
    <type>Checkbox</type>
</CustomField>