force-app/main/default/objects/Contact/fields/MCGrowMainContact__c.field-meta.xml
<CustomField>
    <fullName>MCGrowMainContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Grow Main Contact</label>
    <type>Checkbox</type>
</CustomField>