force-app/main/default/objects/Contact/fields/MCOthersEndUser__c.field-meta.xml
<CustomField>
    <fullName>MCOthersEndUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Others End User</label>
    <type>Checkbox</type>
</CustomField>