force-app/main/default/objects/Contact/fields/MCOthersMainContact__c.field-meta.xml
<CustomField>
    <fullName>MCOthersMainContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Others Main Contact</label>
    <type>Checkbox</type>
</CustomField>