force-app/main/default/objects/Contact/fields/MCPediasureEndUser__c.field-meta.xml
<CustomField>
    <fullName>MCPediasureEndUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Pediasure End User</label>
    <type>Checkbox</type>
</CustomField>