force-app/main/default/objects/Contact/fields/MCPediasureMainContact__c.field-meta.xml
<CustomField>
    <fullName>MCPediasureMainContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Pediasure Main Contact</label>
    <type>Checkbox</type>
</CustomField>