force-app/main/default/objects/Contact/fields/MCSimilacEndUser__c.field-meta.xml
<CustomField>
    <fullName>MCSimilacEndUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Similac End User</label>
    <type>Checkbox</type>
</CustomField>