force-app/main/default/objects/Contact/fields/MCSimilacMainContact__c.field-meta.xml
<CustomField>
    <fullName>MCSimilacMainContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Similac Main Contact</label>
    <type>Checkbox</type>
</CustomField>