force-app/main/default/objects/Contact/fields/MCSimilacMomEndUser__c.field-meta.xml
<CustomField>
    <fullName>MCSimilacMomEndUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Similac Mom End User</label>
    <type>Checkbox</type>
</CustomField>