force-app/main/default/objects/Contact/fields/MCSimilacMomMainContact__c.field-meta.xml
<CustomField>
    <fullName>MCSimilacMomMainContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC - Similac Mom Main Contact</label>
    <type>Checkbox</type>
</CustomField>