force-app/main/default/objects/Contact/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>