force-app/main/default/objects/Contact/fields/MembershipId_Ensure__c.field-meta.xml
<CustomField>
    <fullName>MembershipId_Ensure__c</fullName>
    <label>Membership Id Ensure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>