force-app/main/default/objects/Contact/fields/MembershipId_Glucerna__c.field-meta.xml
<CustomField>
    <fullName>MembershipId_Glucerna__c</fullName>
    <label>Membership Id Glucerna</label>
    <length>255</length>
    <type>Text</type>
</CustomField>