force-app/main/default/objects/Contact/fields/MembershipId_Pediasure__c.field-meta.xml
<CustomField>
    <fullName>MembershipId_Pediasure__c</fullName>
    <label>Membership Id Pediasure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>