force-app/main/default/objects/Contact/fields/MembershipId_Similac__c.field-meta.xml
<CustomField>
    <fullName>MembershipId_Similac__c</fullName>
    <label>Membership Id Similac</label>
    <length>255</length>
    <type>Text</type>
</CustomField>