force-app/main/default/objects/Contact/fields/MembershipNumberOfDaysDormant_Ensure__c.field-meta.xml
<CustomField>
    <fullName>MembershipNumberOfDaysDormant_Ensure__c</fullName>
    <label>MembershipNumberOfDaysDormant Ensure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>