force-app/main/default/objects/Contact/fields/MembershipNumberOfDaysDormant_Glucerna__c.field-meta.xml
<CustomField>
    <fullName>MembershipNumberOfDaysDormant_Glucerna__c</fullName>
    <label>MembershipNumberOfDaysDormant Glucerna</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>