force-app/main/default/objects/Contact/fields/MembershipNumberOfDaysDormant_Pediasure__c.field-meta.xml
<CustomField>
    <fullName>MembershipNumberOfDaysDormant_Pediasure__c</fullName>
    <label>MembershipNumberOfDaysDormant Pediasure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>