force-app/main/default/objects/Contact/fields/MembershipNumberOfDaysDormant_Similac__c.field-meta.xml
<CustomField>
    <fullName>MembershipNumberOfDaysDormant_Similac__c</fullName>
    <label>MembershipNumberOfDaysDormant Similac</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>