force-app/main/default/objects/Contact/fields/MembershipNumberOfTransactions_Ensure__c.field-meta.xml
<CustomField>
    <fullName>MembershipNumberOfTransactions_Ensure__c</fullName>
    <label>MembershipNumberOfTransactions Ensure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>