force-app/main/default/objects/Contact/fields/MembershipNumberOfTransactions_Glucerna__c.field-meta.xml
<CustomField>
    <fullName>MembershipNumberOfTransactions_Glucerna__c</fullName>
    <label>MembershipNumberOfTransactions Glucerna</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>