force-app/main/default/objects/Contact/fields/MembershipNumberOfTransactions_Pediasure__c.field-meta.xml
<CustomField>
    <fullName>MembershipNumberOfTransactions_Pediasure__c</fullName>
    <label>MembershipNumberOfTransactions Pediasure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>