force-app/main/default/objects/Contact/fields/MembershipNumberOfTransactions_Similac__c.field-meta.xml
<CustomField>
    <fullName>MembershipNumberOfTransactions_Similac__c</fullName>
    <label>MembershipNumberOfTransactions Similac</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>