force-app/main/default/objects/Contact/fields/MembershipRecentProduct_Ensure__c.field-meta.xml
<CustomField>
    <fullName>MembershipRecentProduct_Ensure__c</fullName>
    <label>Membership Recent Product Ensure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>