force-app/main/default/objects/Contact/fields/MembershipRecentProduct_Glucerna__c.field-meta.xml
<CustomField>
    <fullName>MembershipRecentProduct_Glucerna__c</fullName>
    <label>Membership Recent Product Glucerna</label>
    <length>255</length>
    <type>Text</type>
</CustomField>