force-app/main/default/objects/Contact/fields/MembershipRecentProduct_Pediasure__c.field-meta.xml
<CustomField>
    <fullName>MembershipRecentProduct_Pediasure__c</fullName>
    <label>Membership Recent Product Pediasure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>