force-app/main/default/objects/Contact/fields/MembershipRecentProduct_Similac__c.field-meta.xml
<CustomField>
    <fullName>MembershipRecentProduct_Similac__c</fullName>
    <label>Membership Recent Product Similac</label>
    <length>255</length>
    <type>Text</type>
</CustomField>