force-app/main/default/objects/Contact/fields/MembershipStartDate__c.field-meta.xml
<CustomField>
    <fullName>MembershipStartDate__c</fullName>
    <label>Loyalty Start Date</label>
    <type>Date</type>
</CustomField>