force-app/main/default/objects/Contact/fields/MembershipStartDate_Ensure__c.field-meta.xml
<CustomField>
    <fullName>MembershipStartDate_Ensure__c</fullName>
    <label>Membership Start Date Ensure</label>
    <type>Date</type>
</CustomField>