force-app/main/default/objects/Contact/fields/MembershipStartDate_Glucerna__c.field-meta.xml
<CustomField>
    <fullName>MembershipStartDate_Glucerna__c</fullName>
    <label>Membership Start Date Glucerna</label>
    <type>Date</type>
</CustomField>